# knapsack-hld

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
code/: README.md
code/anomalies/: __init__.py  analyse.py  sweep.py
code/baselines/: README.md  __init__.py  mcknap.py  trs2008.py
code/heuristics/: README.md  __init__.py  bissa.py  greedy.py  partition_optimal.py
code/instances/: __init__.py  generator.py  io.py  manifest.py  pisinger_generator.py  pisinger_loader.py  schema.py  split.py
code/solvers/: __init__.py  _milp_common.py  base.py  cbc.py  guarded_hld.py  highs.py  hld.py  registry.py  scip.py
code/tuning/: __init__.py  bootstrap.py  smac_run.py
code/utils/: __init__.py  results_schema.py
configs/: hld_smac_best.json  hld_smac_pisinger_inclusive.json
docs/: experiment_followups.md
figures/: README.md  average_computation_time.meta.json
instances/: README.md  schema.json
instances/pisinger_1995/: CHECKSUMS.txt  FINDING_2026_06_05.md  README.md  mcknap.c
paper/: README.md
results/: README.md
results/anomalies/: FINDINGS.md  REPORT.md  analyses.json  sweep.jsonl  tight_gap_validation.json
results/class_ordering_300s_summary/: class_ordering_overall.json  class_ordering_per_cell.csv  (+2 more)
scripts/: README.md  aggregate_pisinger_validation.py  alpha_sweep.py  analyse_anomalies.py  analyze_batch_granularity.py  analyze_guarded_overhead.py  analyze_guarded_summary.py  analyze_guarded_vm.py  analyze_guardrail_buckets.py  analyze_guardrail_signal.py  archive_final_experiments.sh  archive_smac_run.sh  check_batch_granularity.py  compare_class_ordering_60s_vs_300s.py  compare_final_results.py  d2_calibration.py  finalize_full_archive.sh  generate_instances.py  k_sweep.py  make_appendix_tables.py  make_figures.py  make_paper_tables.py  make_summary_tables.py  plot_batch_granularity.py  replay_hld_fallback.py  run_class_ordering_ablation.sh  run_final_experiments.py  run_full_archive.sh  run_lambda_sweep.py  run_pisinger_smac.py  run_pisinger_validation.py  run_post_g2_pipeline.sh  run_smac_canary.sh  run_smac_full.sh  run_time_limit_sensitivity.py  summarize_class_ordering.py  summarize_fallback_stats.py  summarize_final_experiments.py  summarize_k_sweep.py  summarize_time_limit_sensitivity.py  (+3 more)
tests/: README.md  test_alpha_sweep.py  test_anomalies.py  test_archive_final_experiments_script.py  test_archive_smac_run_script.py  test_bissa.py  test_compare_final_results.py  test_finalize_full_archive_script.py  test_generator_correlation.py  test_generator_determinism.py  test_greedy_max_profit_removed.py  test_guarded_hld.py  test_heuristics_greedy.py  test_hld.py  test_hld_config.py  test_make_appendix_tables.py  test_make_figures.py  test_make_paper_tables.py  test_make_summary_tables.py  test_manifest.py  test_mcknap_pisinger1995_example.py  test_milp_baselines.py  test_partition_optimal.py  test_pisinger_generator.py  test_pisinger_loader.py  test_replay_hld_fallback.py  test_results_schema.py  test_run_class_ordering_ablation_script.py  test_run_final_experiments.py  test_run_full_archive_script.py  test_run_pisinger_validation_script.py  test_run_smac_canary_script.py  test_run_smac_full_script.py  test_run_time_limit_sensitivity.py  test_smoke.py  test_solver_interface.py  test_solver_time_limit.py  test_split.py  test_summarize_class_ordering.py  test_summarize_fallback_stats.py  (+8 more)
tuning/: README.md
(+46 files in other folders)
